# django_agenda

./: .gitignore  pyproject.toml
base_static/global/css/: style.css
base_templates/global/: base.html
base_templates/global/partials/: __pagination.html  _header.html
contact/: admin.py  forms.py  models.py  urls.py
contact/migrations/: 0001_initial.py  0002_category_contact_picture_contact_show.py  0003_category_name_contact_cateogry.py  0004_alter_category_options_alter_contact_options_and_more.py  0005_rename_cateogry_contact_category.py
contact/templates/contact/: contact.html  create.html  index.html  login.html  register.html  update.html
contact/templates/contact/partials/: _user-form.html
contact/views/: contact_forms.py  contact_views.py  user_forms.py
core/: settings.py  urls.py
utils/: create_contacts.py
