[project]
name = "django-agenda"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel ARP",email = "garpereira@unifesp.br"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-types (>=0.20.0,<0.21.0)",
    "django-stubs-ext (>=5.1.3,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "ruff (>=0.11.6,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
